# uva-drs-mental-health-assignment

./: .gitignore  README.md  pyproject.toml
src/: corpus_linguistics_analysis.ipynb  drs_corpora.py
src/corpus_linguistics/: corpus_linguistics_analysis.ipynb  drs_corpora.py
src/network_modeling/: drs_network.py  network_analysis.ipynb
src/topic_modeling/: drs_topic_model.py  topic_modelig_creation.ipynb  topic_modeling_preprocessing.ipynb  topic_modeling_probabilities.ipynb
src/word_embedding/: drs_word_embedding.py  word_embedding_analysis.ipynb
