[tool.poetry]
name = "uva-drs-mental-health-assignment"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
jupyter = "^1.0.0"
notebook = "^7.0.6"
pandas = "^2.1.3"
spacy = "^3.7.2"
scipy = "^1.11.4"
en_core_web_sm = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1.tar.gz"}
xlsxwriter = "^3.1.9"
insta-scrape = "^2.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
